@@ -4,7 +4,7 @@ require_once(WWW_DIR."lib/miscsorter.php");
 
 $sorter = new MiscSorter(true);
 
-$cat = 7000;
+$cat = 7010;
 $id = 0;
 
 if (isset($argv[1]))
@@ -15,4 +15,5 @@ if (isset($argv[2]))
 
 $sorter->nfosorter($cat, $id);
 
-?>
+$sorter->musicnzb( $cat, $id);
+
